# TikiAssignment

TikiTest/: CMakeLists.txt  main.cpp
TikiTest/engine/: CEngine.cpp  CEngine.h
TikiTest/product/: CProductManager.cpp  CProductManager.h
TikiTest/rule/: CRuleManager.cpp  CRuleManager.h
TikiTest/user/: CUser.cpp  CUser.h  CUserManager.cpp  CUserManager.h
go/src/TikiTest/: build.sh  tikiTest  tikiTest.go  unit_test.go
go/src/TikiTest/engine/: engine.go
go/src/TikiTest/product/: productManager.go
go/src/TikiTest/shoppingCart/: shoppingCartManager.go
go/src/TikiTest/user/: userManager.go
